--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+
+    <color name="orange_700">#EB8044</color>
+    <color name="orange_500">#F2A87F</color>
+    <color name="orange_200">#F5BFA2</color>
+    <color name="light_blue">#8AB5D3</color>
+    <color name="gray_200">#F7F7F7</color>
+    <color name="gray_700">#737373</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
