--- a/app/src/main/res/layout/adapter_contact.xml
+++ b/app/src/main/res/layout/adapter_contact.xml
@@ -18,7 +18,19 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:contentDescription="@string/menu"
             android:src="@mipmap/ic_menu" />
+
+        <TextView
+            android:id="@+id/nameTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/menuIV"
+            android:fontFamily="@font/poppins"
+            android:textColor="@color/orange_700"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/numberTV"
@@ -26,19 +38,17 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/nameTV"
             android:fontFamily="@font/poppins"
-            android:text="+123-123-1234"
             android:textColor="@color/gray_700"
-            android:textSize="12dp" />
+            android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/nameTV"
+            android:id="@+id/emailTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/numberTV"
             android:fontFamily="@font/poppins"
-            android:text="John Baily"
-            android:textColor="@color/orange_700"
-            android:textSize="14dp"
-            android:textStyle="bold" />
+            android:textColor="@color/gray_700"
+            android:textSize="12sp" />
 
     </RelativeLayout>
 
