created Popup menu for recyclerview items created UI for recyclerview items handling of data list and no data add call intent functionality to delete the item from list and update the list

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
         android:fontFamily="@font/poppins"
         android:text="@string/no_contacts_to_show"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        app:drawableTopCompat="@mipmap/ic_swipe" />
+        android:textSize="18sp"
+        app:drawableTopCompat="@drawable/ic_empty_box" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contactsRV"
