--- a/app/src/main/res/layout/adapter_contact.xml
+++ b/app/src/main/res/layout/adapter_contact.xml
@@ -1,55 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:elevation="5dp"
-    app:cardCornerRadius="10dp">
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/dividerTV"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/bg_orange_btn"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/contactCV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_margin="5dp"
+        android:elevation="5dp"
+        app:cardCornerRadius="10dp">
 
-        <ImageView
-            android:id="@+id/menuIV"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:contentDescription="@string/menu"
-            android:src="@mipmap/ic_menu" />
+            android:padding="10dp">
 
-        <TextView
-            android:id="@+id/nameTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/menuIV"
-            android:fontFamily="@font/poppins"
-            android:textColor="@color/orange_700"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/menuIV"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="@string/menu"
+                android:src="@mipmap/ic_menu" />
 
-        <TextView
-            android:id="@+id/numberTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/nameTV"
-            android:fontFamily="@font/poppins"
-            android:textColor="@color/gray_700"
-            android:textSize="12sp" />
+            <TextView
+                android:id="@+id/nameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@id/menuIV"
+                android:fontFamily="@font/poppins"
+                android:textColor="@color/orange_700"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/emailTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/numberTV"
-            android:fontFamily="@font/poppins"
-            android:textColor="@color/gray_700"
-            android:textSize="12sp" />
+            <TextView
+                android:id="@+id/numberTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/nameTV"
+                android:drawablePadding="6dp"
+                android:fontFamily="@font/poppins"
+                android:gravity="center_vertical"
+                android:textColor="@color/gray_700"
+                app:drawableStartCompat="@mipmap/ic_phone" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/emailTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/numberTV"
+                android:drawablePadding="6dp"
+                android:fontFamily="@font/poppins"
+                android:gravity="center_vertical"
+                android:textColor="@color/gray_700"
+                app:drawableStartCompat="@mipmap/ic_email" />
 
-</androidx.cardview.widget.CardView>
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
