edit a contact, update shared pref and update recyclerview too open menu on adapter item click changed UI of adapter created day/night theme for app styling of app with themes and styles created menu option and show it on clicks delete confirmation popup update list in UI and shared preferences after deletion added icons added styling in all views xml

--- a/app/src/main/res/layout/activity_add_contacts.xml
+++ b/app/src/main/res/layout/activity_add_contacts.xml
@@ -7,51 +7,31 @@
 
     <EditText
         android:id="@+id/nameET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_edit_text"
-        android:fontFamily="@font/poppins"
+        style="@style/myEditTextStyle"
+        android:drawableStart="@mipmap/ic_user"
         android:hint="@string/name"
         android:imeOptions="actionNext"
-        android:inputType="textPersonName"
-        android:paddingStart="15dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="15dp"
-        android:paddingBottom="10dp"
-        android:textColorHint="@color/gray_700" />
+        android:importantForAutofill="no"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/mobileET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/bg_edit_text"
-        android:fontFamily="@font/poppins"
+        style="@style/myEditTextStyle"
+        android:drawableStart="@mipmap/ic_phone"
         android:hint="@string/mobile_number"
         android:imeOptions="actionNext"
+        android:importantForAutofill="no"
         android:inputType="phone"
-        android:maxLength="12"
-        android:paddingStart="15dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="15dp"
-        android:paddingBottom="10dp"
-        android:textColorHint="@color/gray_700" />
+        android:maxLength="12" />
 
     <EditText
         android:id="@+id/emailET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/bg_edit_text"
-        android:fontFamily="@font/poppins"
+        style="@style/myEditTextStyle"
+        android:drawableStart="@mipmap/ic_email"
         android:hint="@string/email"
         android:imeOptions="actionDone"
-        android:inputType="textEmailAddress"
-        android:paddingStart="15dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="15dp"
-        android:paddingBottom="10dp"
-        android:textColorHint="@color/gray_700" />
+        android:importantForAutofill="no"
+        android:inputType="textEmailAddress" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,31 +42,17 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cancelBT"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/myButtonStyle"
             android:layout_marginEnd="10dp"
-            android:layout_weight=".5"
             android:background="@drawable/bg_orange_btn"
-            android:fontFamily="@font/poppins"
-            android:text="@string/cancel"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:text="@string/cancel" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/saveBT"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/myButtonStyle"
             android:layout_marginStart="10dp"
-            android:layout_weight=".5"
             android:background="@drawable/bg_blue_btn"
-            android:fontFamily="@font/poppins"
-            android:text="@string/save"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:text="@string/save" />
 
     </LinearLayout>
 
