--- a/app/src/main/res/layout/adapter_contact.xml
+++ b/app/src/main/res/layout/adapter_contact.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:elevation="5dp"
+        android:focusable="false"
         app:cardCornerRadius="10dp">
 
         <RelativeLayout
@@ -35,37 +36,31 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:contentDescription="@string/menu"
+                android:focusable="false"
                 android:src="@mipmap/ic_menu" />
 
             <TextView
                 android:id="@+id/nameTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/myTextViewStyle"
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@id/menuIV"
-                android:fontFamily="@font/poppins"
                 android:textColor="@color/orange_700"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/numberTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/myTextViewStyle"
                 android:layout_below="@+id/nameTV"
                 android:drawablePadding="6dp"
-                android:fontFamily="@font/poppins"
                 android:gravity="center_vertical"
                 android:textColor="@color/gray_700"
                 app:drawableStartCompat="@mipmap/ic_phone" />
 
             <TextView
                 android:id="@+id/emailTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/myTextViewStyle"
                 android:layout_below="@+id/numberTV"
                 android:drawablePadding="6dp"
-                android:fontFamily="@font/poppins"
                 android:gravity="center_vertical"
                 android:textColor="@color/gray_700"
                 app:drawableStartCompat="@mipmap/ic_email" />
