--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
     <color name="orange_200">#F5BFA2</color>
     <color name="light_blue">#8AB5D3</color>
     <color name="gray_200">#F7F7F7</color>
-    <color name="gray_700">#737373</color>
+    <color name="gray_500">#B3B2B2</color>
+    <color name="gray_700">#A6A6A6</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
